"""This module contains a class representing a real-coded chromosome."""
from .chromosome import Chromosome


class RealCodedChromosome(Chromosome):

    def __init__(self):
        raise ValueError('not implemented!')
